fix clienterror function bug

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
-<head>
-    <head>TiServer</head>
-    <title>Tiserver</title>
-    <p>Welcome to Tiny Server!</p>
-</head>
+<!DOCTYPE html>
+<html>
+    <head>
+        <h1>TiServer</h1>
+        <title>TiServer</title>
+        <hr>
+    </head>
+    <body>
+        <p>Welcome to Tiny Server!</p>
+        <form name="input" method="post">
+            Username: <input type="text" name="user">
+            <input type="submit" value="Submit">
+        </form>
+    </body>
+</html>
+
+
 
